# lucifer

./: Cargo.toml  README.md
src/: lib.rs  main.rs  montecarlo.rs
src/camera/: affine.rs  mod.rs  tonemap.rs
src/geometry/: cube.rs  disc.rs  mod.rs  plane.rs  sphere.rs
src/lighting/: blackbody.rs  lambert.rs  mod.rs  phong.rs
src/render/: debug.rs  mod.rs  path.rs  ray.rs
src/scene/: mod.rs
