[package]
authors = ["Enno Cramer <ecramer@memfrob.de>"]
name = "lucifer"
version = "0.1.0"
description = "A physically based, offline renderer"
homepage = "https://github.com/ennocramer/lucifer"

[dependencies]
cgmath = "~0.16.0"
clap = "~2.31.0"
image = "~0.19.0"
rand = "~0.5.0"
smallvec = "~0.6.0"
derive_more = "~0.11.0"
